[package]
name = "core"
version = "0.1.0"
authors = ["downtime <yrainbxqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
command = ["futures"]
subscription = ["futures"]

[dependencies]
futures = { version = "0.3", optional = true }
